# swagger/userGet.swagger.yaml
@@ -81,3 +81,85 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+  /{member_id}/mymissions:
+    get:
+      tags:
+        - User-GetDoingMission
+      summary: 내가 진행중인 미션 조회 로직
+      parameters:
+        - name: member_id
+          in: path
+          schema:
+            type: integer
+          required: true
+        - name: mission_id
+          in: query
+          required: false
+          schema:
+            properties:
+              mission_id:
+                type: integer
+        - name: paging
+          in: query
+          required: true
+          schema:
+            properties:
+              size:
+                type: integer
+      responses:
+        "200":
+          description: 내가 진행중인 미션 조회 성공
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: array
+                example: { "missionData": [{ "store_name": "Store Name", "reward": 500, "deadline": "2099.01.01", "mission_body": "미션 내용1" }, { "store_name": "Store Name2", "reward": 500, "deadline": "2099.12.31", "mission_body": "미션 내용2" }], "cursorId": 1 }
+
+        "400":
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        "500":
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
